Update OpenAPI documentation
